[package]
name = "bc4py-plot-cli"
version = "0.1.1"
authors = ["namuyan <namuyan@kumacoin.dev>"]
edition = "2018"
license = "MIT"
description = "bc4py proof of capacity plot file generator tool"
repository = "https://github.com/namuyan/bc4py-plot-cli"
readme = "README.md"

[dependencies]
clap = "3.0.0-beta.1"
hex = "0.4"

[dependencies.bc4py_hash]
version = "0.1.3"
# path = "..\\bc4py_hash"
features= ["poc", "progress-bar"]
